--- a/nuda-consulting/package.json
+++ b/nuda-consulting/package.json
@@ -16,6 +16,7 @@
     "postprocessing": "^6.38.3",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "sass": "^1.97.3",
     "three": "^0.183.1"
   },
   "devDependencies": {
