--- a/nuda-consulting/package.json
+++ b/nuda-consulting/package.json
@@ -11,12 +11,18 @@
   "dependencies": {
     "@react-three/fiber": "^9.5.0",
     "@react-three/postprocessing": "^3.0.4",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "framer-motion": "^12.34.3",
+    "lucide-react": "^0.575.0",
     "next": "16.1.6",
+    "ogl": "^1.0.11",
     "postprocessing": "^6.38.3",
+    "radix-ui": "^1.4.3",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "sass": "^1.97.3",
+    "tailwind-merge": "^3.5.0",
     "three": "^0.183.1"
   },
   "devDependencies": {
@@ -27,7 +33,9 @@
     "babel-plugin-react-compiler": "^1.0.0",
     "eslint": "^9",
     "eslint-config-next": "16.1.6",
+    "shadcn": "^3.8.5",
     "tailwindcss": "^4",
+    "tw-animate-css": "^1.4.0",
     "typescript": "^5"
   }
 }
