--- a/nuda-consulting/package.json
+++ b/nuda-consulting/package.json
@@ -22,6 +22,7 @@
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-icons": "^5.5.0",
+    "resend": "^6.9.2",
     "sass": "^1.97.3",
     "tailwind-merge": "^3.5.0",
     "three": "^0.183.1"
